--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,36 +1,22 @@
 body {
   font-family: HelveticaNeue, Helvetica, Arial, sans-serif !important;
   font-size: 16px;
+  width: 100%;
+  margin: 0 auto;
 }
 a {
   color: #00b7ff;
 }
 h1 {
-  color: #00f;
+  color: #317eac;
   font-size: 48px;
   font-weight: 100;
 }
 .blog.content {
-  width: 500px;
+  width: 700px;
   display: block;
   margin: 0 auto;
   font-size: 16px;
-  max-width: 500px;
-  margin: auto;
-}
-.images {
-  width: 700px;
-  height: 400px;
-  position: relative;
-  right: 110px;
-}
-.next {
-  position: relative;
-  left: 450px;
-}
-.previous {
-  position: relative;
-  right: 350px;
 }
 .top.border {
   color: #fff;
@@ -47,4 +33,11 @@ h1 {
   width: 100%;
   height: 52px;
   background-color: #4b0082;
+}
+.images {
+  display: block;
+  text-align: center;
+}
+.blog.title {
+  text-align: center;
 }
