--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -1,37 +1,24 @@
 body
   font-family: HelveticaNeue, Helvetica, Arial, sans-serif !important
-  font-size: 16px 
+  font-size: 16px
+  width: 100%;
+  margin: 0 auto;
 
 a
   color: #00B7FF
 
 
 h1 
-  color: blue
+  color: #317eac
   font-size: 48px
   font-weight: 100
 
 .blog.content
-  width:500px;
+  width:700px;
   display: block;
   margin: 0 auto;
   font-size: 16px 
-  max-width: 500px
-  margin: auto
 
-.images
-  width: 700px;
-  height: 400px;
-  position: relative;
-  right: 110px;
-
-.next
-  position: relative;
-  left: 450px;
-  
-.previous
-  position: relative;
-  right: 350px;
 
 .top.border
   color: white
@@ -48,4 +35,12 @@ h1
   width: 100%;
   height: 52px;
   background-color:indigo
+
+.images
+  display: block
+  text-align: center
+
+.blog.title
+  text-align: center
+ 
 
