--- a/views/graphpage.ejs
+++ b/views/graphpage.ejs
@@ -31,7 +31,7 @@
 	<body>
 
 
-	<div id="graph" class="aGraph" style="position:absolute;top:0px;left:0; float:left;"></div>
+	<div id="graph" class="aGraph"></div>
 
 
 	<script>
@@ -44,6 +44,10 @@
 		
 		// create a simple data array that we'll plot with a line (this array represents only the Y values, X will just be the index location)
 		var data = [3, 6, 2, 7, 5, 2, 0, 3, 8, 9, 2, 5, 9, 3, 6, 3, 6, 2, 7, 5, 2, 1, 3, 8, 9, 2, 5, 9, 2, 7];
+
+		for (i=0; i<data.length; i++) {
+			data[i]=data[i]+1;
+		}
 		// X scale will fit all values from data[] within pixels 0-w
 		var x = d3.scale.linear().domain([0, data.length]).range([0, w]);
 		// Y scale will fit values from 0-10 within pixels h-0 (Note the inverted domain for the y-scale: bigger is up!)
@@ -90,9 +94,7 @@
 			// do this AFTER the axes above so that the line is above the tick-lines
   			graph.append("svg:path").attr("d", line(data));
 			
-	</script>
-
-	<p> Did it work? </p>
+			</script>
 
 	</body>
 </html>
