--- a/views/opt_approx.ejs
+++ b/views/opt_approx.ejs
@@ -5,16 +5,113 @@
     <script type="text/javascript" src="bower_components/d3/d3.min.js"></script>
     <script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
     <script src="bower_components/katex/dist/katex.min.js"></script>
+    <link rel='stylesheet' href='/stylesheets/cerulean.min.css' />
     <link rel='stylesheet' href='bower_components/katex/dist/katex.min.css' />
     <link rel='stylesheet' href='/stylesheets/style.css' />
-    <link rel='stylesheet' href='/stylesheets/cerulean.min.css' />
-    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/KaTeX/0.3.0/katex.min.css">
 
    </head>
-   <body>
-<xmp theme="cerulean" style="display:none;">
-<div class="blog content">
+   <style>
+   body {
+ 
+  width: 100%;
+ 
+  margin: 0 auto;
 
+   }
+ 
+nav {
+ 
+  width: 100%;
+
+  position: fixed;
+
+  top: 0;
+ 
+   }
+ 
+nav ul {
+ 
+  list-style: none;
+ 
+  overflow: hidden; }
+ 
+nav ul li {
+ 
+  float: left;
+ 
+  width: 25%; }
+ 
+nav ul li a {
+ 
+  text-align: center;
+ 
+  padding: 12px 0;
+ 
+  display: block;
+ 
+  width: 100%;
+ 
+  background: #4169e1; /* Old browsers */
+ 
+  background: -moz-linear-gradient(top, #00bfff 0%, #32cbff 100%); /* FF3.6+ */
+ 
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#00bfff), color-stop(100%,#32cbff)); /* Chrome,Safari4+ */
+ 
+  background: -webkit-linear-gradient(top, #00bfff 0%,#32cbff 100%); /* Chrome10+,Safari5.1+ */
+ 
+  background: -o-linear-gradient(top, #00bfff 0%,#32cbff 100%); /* Opera 11.10+ */
+ 
+  background: linear-gradient(to bottom, #00bfff 0%,#32cbff 100%); /* W3C, IE10+ */
+ 
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00bfff', endColorstr='#32cbff',GradientType=0 ); /* IE6-9 */
+ 
+  endColorstr='#32cbff',GradientType=0 ); /* IE6-9 */
+ 
+}
+ 
+nav ul li a,
+ 
+nav ul li a:focus,
+ 
+nav ul li a:visited,
+ 
+nav ul li a:hover,
+ 
+nav ul li a:active {
+ 
+  color: #000;
+ 
+  text-decoration: none; }
+ 
+nav ul li a:hover,
+ 
+nav ul li a:active {
+ 
+  background: #19a2d1; /* Old browsers */
+ 
+  background: -moz-linear-gradient(top, #19a2d1 0%, #66cle0 100%); /* FF3.6+ */
+ 
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#19a2d1), color-stop(100%,#66cle0)); /* Chrome,Safari4+ */
+ 
+  background: -webkit-linear-gradient(top, #19a2d1 0%,#66cle0 100%); /* Chrome10+,Safari5.1+ */
+ 
+  background: -o-linear-gradient(top, #19a2d1 0%,#66cle0 100%); /* Opera 11.10+ */
+ 
+  background: linear-gradient(to bottom, #19a2d1 0%,#66cle0 100%); /* W3C, IE10+ */
+ 
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#19a2d1', endColorstr='#66cle0',GradientType=0 ); /* IE6-9 */
+ 
+}
+ 
+  </style>
+   <body>
+   <br><br>
+
+<div class="blog title">
+<h1> Approximation of the Lambert W Function </h1>
+</div>
+
+<div class="blog content">
 <h2>Background</h2>
 
 <p> In my <a href="http://liamcwalsh.herokuapp.com/discrete_choice">last post</a>, I derived the optimal price for a business to charge to generate maximum revenue under a discrete choice system. Recall that the optimal price took the form: </p>
@@ -45,7 +142,7 @@
 
 <p> The graph is nearly linear, which would indicate that perhaps there exists a fairly simple approximation to the Lambert W function, which could significantly improve the runtime of the analytic calculation fo the optimal price. </p>
 
-## First Order Approximation
+<h2>First Order Approximation</h2>
 
 <p> <a href="http://mathworld.wolfram.com/LambertW-Function.html"> According to Wolfram Mathworld</a>, The Lambert W function W(x) has a first order approximation of the form: </p>
 
@@ -133,20 +230,30 @@
 
 <p> An important point to note, however, is the range of x values within which the approximation works.  While it does hold for all values of x, for x&lt;1, the approximation is no longer usuable. Since the approxmation has x values in the denominator of some of the fractions, smaller x values cause the approximation to blow up, and therefore become innaccurate. For (-1/e)&lt;x&lt;0, the Lambert W function outputs multiple values, some of which are imaginary.  For x&gt;(-1/e), the Lambert W function becomes fully imaginary. </p>
 
-<p> In the case of the optimal pricing analysis, while e^&alpha; tends to infinity as &alpha; goes to infinity, the approximation involves natural logarithms, which do not combine with negative values well. As such, the approximation is only good for &alpha;&gt;0. </p>
+<p> In the case of the optimal pricing analysis, while e^&alpha; tends to infinity as &alpha; goes to infinity, the approximation taking the natural logarithm of &alpha;, which does not combine with negative values well. As such, the approximation is only good for &alpha;&gt;0. </p>
 
 <p> For a more detailed look at both the uses of the W function, and the derivation of the approximation used, <a href="https://cs.uwaterloo.ca/research/tr/1993/03/W.pdf">this paper</a> by R.M Corless, G.H. Gonnet, D.E.G. Hare, D.J. Jeffrey, and D.E. Knuth is a fantastic resource.</p>
 
-<div class="previous">
-<p> <a href="/discrete_choice">Previous: Discrete Choice Model Optimization </a></p>
+</div>
+<nav>
+  <ul>
+    <li>
+       <a href="/">Home</a>
+    </li>
+    <li>
+      <a href="/discrete_choice">Previous</a>
+    </li>
+    <li>
+      <a href="">Next</a>
+    </li>
+    <li>
+      <a href="#">About</a>
+    </li>
+  </ul>
+</nav>
 </div>
 
-</xmp>
-</div>
 
-
-<script src="bower_components/strapdown/strapdown.js"></script>
-<link rel="stylesheet" href="bower_components/strapdown/strapdown.css">
 
 <script type="text/javascript">
  $(".katex").each(function() {
