Added graph page

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -13,6 +13,9 @@ h1
   font-size: 48px
   font-weight: 100
 
+h2
+
+
 .blog.content
   width:700px;
   display: block;
@@ -43,4 +46,8 @@ h1
 .blog.title
   text-align: center
  
-
+.thumbnail
+  border: 1px solid black
+  display: inline-block
+  padding 40px
+  margin: 10px
