--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -12,6 +12,7 @@ h1 {
   font-size: 48px;
   font-weight: 100;
 }
+h2,
 .blog.content {
   width: 700px;
   display: block;
@@ -40,4 +41,10 @@ h1 {
 }
 .blog.title {
   text-align: center;
+}
+.thumbnail {
+  border: 1px solid #000;
+  display: inline-block;
+  padding: 40px;
+  margin: 10px;
 }
