--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -12,7 +12,6 @@ h1 {
   font-size: 48px;
   font-weight: 100;
 }
-h2,
 .blog.content {
   width: 700px;
   display: block;
@@ -45,6 +44,13 @@ h2,
 .thumbnail {
   border: 1px solid #000;
   display: inline-block;
-  padding: 40px;
+  padding: 20px;
   margin: 10px;
+}
+.bar {
+  display: inline-block;
+  width: 20px;
+  height: 75px;
+  background-color: #008080;
+  margin-right: 2px;
 }
