--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -12,9 +12,7 @@ h1
   color: #317eac
   font-size: 48px
   font-weight: 100
-
-h2
-
+  
 
 .blog.content
   width:700px;
@@ -49,5 +47,12 @@ h2
 .thumbnail
   border: 1px solid black
   display: inline-block
-  padding 40px
+  padding 20px
   margin: 10px
+
+.bar
+  display: inline-block
+  width: 20px
+  height: 75px
+  background-color: teal
+  margin-right: 2px
