Minor page edits

--- a/views/discrete_choice.ejs
+++ b/views/discrete_choice.ejs
@@ -160,7 +160,7 @@ nav ul li a:active {
 
 <p> To solve this equation for p&#42;, I discovered the <a href="https://en.wikipedia.org/wiki/Lambert_W_function">Lambert W Function</a> was necessary </p>
 
-<h2>The Lambert W Function</h2>
+<a name="lambertw"><h2>The Lambert W Function</h2></a>
 
 <p>This function, W(x), can be defined implicitly as: </p>
 
