--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -54,3 +54,13 @@ h1 {
   background-color: #008080;
   margin-right: 2px;
 }
+.axis path,
+.axis line {
+  fill: none;
+  stroke: #000;
+  shape-rendering: crispEdges;
+}
+.axis text {
+  font-family: sans-serif;
+  font-size: 11px;
+}
