--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -56,3 +56,13 @@ h1
   height: 75px
   background-color: teal
   margin-right: 2px
+
+.axis path, .axis line 
+  fill:none
+  stroke: black
+  shape-rendering: crispEdges
+
+.axis text
+  font-family: sans-serif
+  font-size: 11px
+
