--- a/views/barchart.ejs
+++ b/views/barchart.ejs
@@ -61,66 +61,17 @@
 			.attr("font-size","11px")
 			.attr("text-anchor","middle");
 
-			</script>
-			<script type="text/javascript">
 
-			var w = 500;
-			var h = 100;
-			var barPadding = 1;
+			var wscatter = 500;
+			var hscatter = 300;
+			var padding = 20;
 			
 			var dataset = [ 5, 10, 13, 19, 21, 25, 22, 18, 15, 13,
 			11, 12, 15, 20, 18, 17, 16, 18, 23, 25 ];
 			
-			//Create SVG element
-			var svg = d3.select("body")
-			.append("svg")
-			.attr("width", w)
-			.attr("height", h);
 
 
-			var scatter = [
-                  [ 5,     20 ],
-                  [ 480,   90 ],
-                  [ 250,   50 ],
-                  [ 100,   33 ],
-                  [ 330,   95 ],
-                  [ 410,   12 ],
-                  [ 475,   44 ],
-                  [ 25,    67 ],
-                  [ 85,    21 ],
-                  [ 220,   88 ]
-              ];
-			
-			svg.selectAll("circle")
-				.data(scatter)
-				.enter()
-				.append("circle")
-				.attr("cx", function(d){
-					return d[0];
-				})
-				.attr("cy",function(d){
-					return d[1];
-				})
-				.attr("r",function(d){
-					return Math.sqrt(h-d[1]); //set radius based on area, which is based on size of 								y, cleaner to set radius than deal with area
-				});
 
-				svg.selectAll("text")
-					.data(scatter)
-					.enter()
-					.append("text")
-					.text(function(d){
-						return d[0] + "," + d[1];
-					})
-					.attr("x",function(d){
-						return d[0];
-					})
-					.attr("y",function(d){
-						return d[1];
-					})
-					.attr("font-family","sans-serif")
-					.attr("font-size","11px")
-					.attr("fill","red");
 
 		</script>
 	</body>
