--- a/views/barchart.ejs
+++ b/views/barchart.ejs
@@ -3,14 +3,22 @@
 <head>
 	<title><%= title %></title>
 	<script type="text/javascript" src="bower_components/d3/d3.min.js"></script>
-	<style type="text/css">
-		/* No style rules here yet */		
+	<link rel='stylesheet' href='/stylesheets/style.css'/>
+	<style>
+		rect:hover {
+			fill: orange;
+		}
 	</style>
 </head>
 <body>
 	<p id="add"> Click to add a value </p>
 	<p id="remove"> Click to remove a value </p>
 	<p id="randomize"> Click to randomize the data </p>
+	
+	<div id="tooltip" class="hidden">
+		<p><strong>Label Heading</strong></p>
+		<p><span id="value">100</span>%</p>
+	</div>
 
 	<script type="text/javascript">
 
@@ -76,6 +84,10 @@
 			})
 			.attr("fill", function(d) {
 				return "rgb(0, 0, " + (d.value * 10) + ")";
+			})
+			.append("title")
+			.text(function(d){
+				return d.value;
 			});
 
 			//Create labels
@@ -95,7 +107,8 @@
 			})
 			.attr("font-family", "sans-serif")
 			.attr("font-size", "11px")
-			.attr("fill", "white");
+			.attr("fill", "white")
+			.style("pointer-events","none");
 
 
 
@@ -153,13 +166,17 @@
 					})
 					.attr("fill", function(d) {
 						return "rgb(0, 0, " + (d.value * 10) + ")";
+					})
+					.append("title")
+					.text(function(d){
+						return d.value
 					});
 
 					//Update…
 					bars.transition()
 					.delay(function(d, i) {
-						   return i / dataset.length * 2000;
-					   })
+						return i / dataset.length * 2000;
+					})
 					.duration(500) //controls animation speed
 					.attr("x", function(d, i) {
 						return xScale(i);
@@ -170,6 +187,13 @@
 					.attr("width", xScale.rangeBand())
 					.attr("height", function(d) {
 						return yScale(d.value);
+					})
+					.attr("fill", function(d) {
+						return "rgb(0, 0, " + (d.value * 10) + ")";
+					})
+					.select("title")  //this is how you can edit attr after theyre created
+					.text(function(d){
+						return d.value;
 					});
 
 					//Exit…
@@ -204,18 +228,18 @@
 					//Update…
 					labels.transition()
 					.delay(function(d, i) {
-						   return i / dataset.length * 2000;
-					   })
+						return i / dataset.length * 2000;
+					})
 					.duration(500)
-					   .text(function(d) {
-					   		return d.value;
-					   })
-					   .attr("x", function(d, i) {
-					   		return xScale(i) + xScale.rangeBand() / 2;
-					   })
-					   .attr("y", function(d) {
-					   		return h - yScale(d.value) + 14;
-					   });
+					.text(function(d) {
+						return d.value;
+					})
+					.attr("x", function(d, i) {
+						return xScale(i) + xScale.rangeBand() / 2;
+					})
+					.attr("y", function(d) {
+						return h - yScale(d.value) + 14;
+					});
 					//Exit…
 					labels.exit()
 					.transition()
