--- a/views/scatterplot.ejs
+++ b/views/scatterplot.ejs
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title><%= title %></title>
-	<script type="text/javascript" src="bower_components/d3/d3.min.js"></script>
+	<script type="text/javascript" src="/bower_components/d3/d3.min.js"></script>
 	<link rel='stylesheet' href='/stylesheets/style.css'/>
 </head>
 <body>
