--- a/views/opt_approx.ejs
+++ b/views/opt_approx.ejs
@@ -6,8 +6,9 @@
     <script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
     <script src="bower_components/katex/dist/katex.min.js"></script>
     <link rel='stylesheet' href='/stylesheets/cerulean.min.css' />
-    <link rel='stylesheet' href='bower_components/katex/dist/katex.min.css' />
     <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link rel='stylesheet' href='bower_components/katex/dist/katex.min.css' />
+    <link rel="shortcut icon" href="/images/favicon.ico">
 
    </head>
    <style>
@@ -247,7 +248,7 @@ nav ul li a:active {
       <a href="">Next</a>
     </li>
     <li>
-      <a href="#">About</a>
+      <a href="/about">About</a>
     </li>
   </ul>
 </nav>
