--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -3,6 +3,7 @@ body {
   font-size: 16px;
   width: 100%;
   margin: 0 auto;
+  background-color: #fff;
 }
 a {
   color: #00b7ff;
@@ -11,12 +12,14 @@ h1 {
   color: #317eac;
   font-size: 48px;
   font-weight: 100;
+  background-color: #fff;
 }
 .blog.content {
   width: 700px;
   display: block;
   margin: 0 auto;
   font-size: 16px;
+  background-color: #fff;
 }
 .top.border {
   color: #fff;
@@ -63,4 +66,7 @@ h1 {
 .axis text {
   font-family: sans-serif;
   font-size: 11px;
+}
+.consist {
+  color: #00b7ff;
 }
