--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -3,6 +3,7 @@ body
   font-size: 16px
   width: 100%;
   margin: 0 auto;
+  background-color: white
 
 a
   color: #00B7FF
@@ -12,13 +13,16 @@ h1
   color: #317eac
   font-size: 48px
   font-weight: 100
+  background-color: white
   
 
 .blog.content
   width:700px;
   display: block;
   margin: 0 auto;
-  font-size: 16px 
+  font-size: 16px
+  background-color: white
+
 
 
 .top.border
@@ -66,3 +70,5 @@ h1
   font-family: sans-serif
   font-size: 11px
 
+.consist
+  color: #00B7FF
