--- a/views/discrete_choice.ejs
+++ b/views/discrete_choice.ejs
@@ -8,6 +8,7 @@
     <link rel='stylesheet' href='/stylesheets/cerulean.min.css' />
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/KaTeX/0.3.0/katex.min.css"/>
     <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link rel="shortcut icon" href="/images/favicon.ico">
 
    </head>
    <style>
@@ -252,7 +253,7 @@ nav ul li a:active {
       <a href="/opt_approx">Next</a>
     </li>
     <li>
-      <a href="#">About</a>
+      <a href="/about">About</a>
     </li>
   </ul>
 </nav>
